--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-query": "^3.39.3",
     "react-toastify": "^10.0.2",
     "tailwind-merge": "^2.2.0"
   },
