adding more components

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_APP_BASE_URL = "https://jsonplaceholder.typicode.com"
 
-VITE_APP_BASE_URL = "https://grito-server.azurewebsites.net"
+NEXT_BASE_URL = "https://grito-server.azurewebsites.net"
