--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
+    "react-phone-number-input": "^3.3.9",
     "react-query": "^3.39.3",
+    "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^10.0.2",
     "tailwind-merge": "^2.2.0"
   },
@@ -31,6 +34,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-select-country-list": "^2.2.3",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
